; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/wanrouter/extr_wanmain.c_wanrouter_find_device.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/wanrouter/extr_wanmain.c_wanrouter_find_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wan_device = type { %struct.wan_device*, i32 }

@wanrouter_router_devlist = common dso_local global %struct.wan_device* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.wan_device* (i8*)* @wanrouter_find_device to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.wan_device* @wanrouter_find_device(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.wan_device*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load %struct.wan_device*, %struct.wan_device** @wanrouter_router_devlist, align 8
  store %struct.wan_device* %4, %struct.wan_device** %3, align 8
  br label %5

5:                                                ; preds = %18, %1
  %6 = load %struct.wan_device*, %struct.wan_device** %3, align 8
  %7 = icmp ne %struct.wan_device* %6, null
  br i1 %7, label %8, label %15

8:                                                ; preds = %5
  %9 = load %struct.wan_device*, %struct.wan_device** %3, align 8
  %10 = getelementptr inbounds %struct.wan_device, %struct.wan_device* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 8
  %12 = load i8*, i8** %2, align 8
  %13 = call i64 @strcmp(i32 %11, i8* %12)
  %14 = icmp ne i64 %13, 0
  br label %15

15:                                               ; preds = %8, %5
  %16 = phi i1 [ false, %5 ], [ %14, %8 ]
  br i1 %16, label %17, label %22

17:                                               ; preds = %15
  br label %18

18:                                               ; preds = %17
  %19 = load %struct.wan_device*, %struct.wan_device** %3, align 8
  %20 = getelementptr inbounds %struct.wan_device, %struct.wan_device* %19, i32 0, i32 0
  %21 = load %struct.wan_device*, %struct.wan_device** %20, align 8
  store %struct.wan_device* %21, %struct.wan_device** %3, align 8
  br label %5

22:                                               ; preds = %15
  %23 = load %struct.wan_device*, %struct.wan_device** %3, align 8
  ret %struct.wan_device* %23
}

declare dso_local i64 @strcmp(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
